chore: fix cover gets distorted on safari

--- a/web/app/assets/stylesheets/components/_release.scss
+++ b/web/app/assets/stylesheets/components/_release.scss
@@ -50,7 +50,7 @@
 
   &__cover-image {
     height: 100%;
-    width: auto;
+    position: absolute;
 
     opacity: 0;
     transition: opacity 0.25s;
